# tvmate

./: .gitignore  CREDITS.md  Cargo.toml  Dockerfile  Dockerfile.arm64  README.md  rust-toolchain.toml  tailwind.config.js
.cargo/: config.toml
.github/workflows/: build_apk_dev.yml  deploy_bigselfcloud.yml  deploy_dev.yml  deploy_selfcloud.yml
app/: Cargo.toml
app/src/: lib.rs
app/src/apis/: mod.rs
app/src/components/: audio_chat.rs  chatbox.rs  dialog.rs  help_dialog.rs  join_dialog.rs  mod.rs  portal.rs  room_info.rs  toaster.rs  video_chat.rs  video_player.rs
app/src/components/icons/: mod.rs
app/src/networking/: mod.rs  room_manager.rs  rtc_connect.rs
app/src/pages/: home_page.rs  mod.rs  room.rs
app/src/tauri_provider/: mod.rs
app/src/utils/: mod.rs
app/src/web_glue/: mod.rs
common/: Cargo.toml
common/src/: endpoints.rs  lib.rs  message.rs  message_sender.rs  params.rs  util.rs
frontend/: Cargo.toml
frontend/src/: lib.rs
public/: manifest.json
server/: Cargo.toml
server/src/: main.rs
server/src/room/: mod.rs
style/: main.scss
tauri/: Cargo.toml  Trunk.toml  index.html  tailwind.config.js
tauri/.cargo/: config.toml
tauri/src/: main.rs
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tauri/src-tauri/icons/: icon.icns
tauri/src-tauri/src/: lib.rs
tauri/tauri-plugin-tvmate/: Cargo.toml  README.md
tauri/tauri-plugin-tvmate/android/: build.gradle.kts
tauri/tauri-plugin-tvmate/android/src/androidTest/java/: ExampleInstrumentedTest.kt
tauri/tauri-plugin-tvmate/android/src/main/java/: ExamplePlugin.kt
tauri/tauri-plugin-tvmate/android/src/test/java/: ExampleUnitTest.kt
tauri/tauri-plugin-tvmate/examples/vanilla/src-tauri/: Cargo.toml  tauri.conf.json
tauri/tauri-plugin-tvmate/examples/vanilla/src-tauri/capabilities/: default.json
tauri/tauri-plugin-tvmate/examples/vanilla/src-tauri/src/: lib.rs
tauri/tauri-plugin-tvmate/ios/: Package.swift  README.md
tauri/tauri-plugin-tvmate/ios/Sources/: ExamplePlugin.swift
tauri/tauri-plugin-tvmate/permissions/autogenerated/: reference.md
tauri/tauri-plugin-tvmate/src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
tauri_app/: Cargo.toml  index.html
tauri_app/src/: main.rs
tauri_app/src-tauri/: Cargo.toml  tauri.conf.json
tauri_app/src-tauri/src/: main.rs
tauri_app/style/: main.scss
