[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos_axum = { workspace = true, optional = true }

http.workspace = true
cfg-if.workspace = true
thiserror.workspace = true
leptos-use = { workspace = true }
tracing = { workspace = true }

common = { path = "../common", default-features = false, features = [
    "hydrate",
] }
codee = { workspace = true }
serde_urlencoded = { workspace = true }
uuid.workspace = true
wasm-bindgen.workspace = true
web-sys.workspace = true

serde.workspace = true

wasm-bindgen-futures.workspace = true

[features]
default = []
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
csr = ["leptos/csr", "leptos_meta/csr", "leptos_router/csr"]
ssr = [
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "dep:leptos_axum",
    "leptos-use/ssr",
]
