[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true, optional = true }
rand = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
bincode = { workspace = true }

axum = { workspace = true, optional = true }
futures = { workspace = true, optional = true }

[features]
default = []
hydrate = []
ssr = ["dep:tokio", "dep:axum", "dep:futures"]
