[package]
name = "tvmate-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { workspace = true, features = ["csr"] }
app = { path = "../app", default-features = false, features = ["csr"] }

wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
js-sys.workspace = true
serde = { workspace = true, features = ["derive"] }
serde-wasm-bindgen.workspace = true
console_error_panic_hook.workspace = true
tracing-subscriber.workspace = true
tracing-subscriber-wasm.workspace = true
tracing.workspace = true

tauri-sys = { workspace = true }
futures.workspace = true

[features]
ssr = [] # Only to satisfy vscode, does nothing
