[package]
name = "tvmate"
version = "0.1.0"
description = "Watch TV and Videos together seamlessly"
authors = ["Deep Gaurav"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tvmate_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
tauri = { workspace = true, features = [] }
tauri-plugin-shell = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tauri-plugin-tvmate = { path = "../tauri-plugin-tvmate" }
