[package]
name = "tauri-plugin-tvmate"
version = "0.1.0"
authors = ["You"]
description = ""
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-tvmate"

[dependencies]
tauri = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
tauri-plugin = { version = "2.0.1", features = ["build"] }
