[package]
name = "tvmate"
version = "0.1.0"
description = "Watch TV and Videos together seamlessly"
authors = ["Deep Gaurav"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tvmate_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = [] }
tauri-plugin-shell = "2.0.0-rc"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
